--- a/deploy/kubernetes-distributed/hostpath/csi-hostpath-driverinfo.yaml
+++ b/deploy/kubernetes-distributed/hostpath/csi-hostpath-driverinfo.yaml
@@ -8,10 +8,10 @@ metadata:
     app.kubernetes.io/name: hostpath.csi.k8s.io
     app.kubernetes.io/component: csi-driver
 spec:
-  # Supports persistent and ephemeral inline volumes.
+  # Supports persistent volumes.
   volumeLifecycleModes:
   - Persistent
-  - Ephemeral
+  # - Ephemeral
   # To determine at runtime which mode a volume uses, pod info and its
   # "csi.storage.k8s.io/ephemeral" entry are needed.
   podInfoOnMount: true
