--- a/deploy/kubernetes-distributed/hostpath/csi-hostpath-storageclass-fast.yaml
+++ b/deploy/kubernetes-distributed/hostpath/csi-hostpath-storageclass-fast.yaml
@@ -9,5 +9,5 @@ metadata:
     app.kubernetes.io/component: storageclass
 provisioner: hostpath.csi.k8s.io
 volumeBindingMode: WaitForFirstConsumer
-parameters:
-  kind: fast
+# parameters:
+#   kind: fast
