--- a/examples/csi-pvc.yaml
+++ b/examples/csi-pvc.yaml
@@ -8,4 +8,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: csi-hostpath-sc # defined in csi-storageclass.yaml
+  storageClassName: csi-hostpath-fast # defined in csi-storageclass.yaml
