--- a/examples/csi-storageclass.yaml
+++ b/examples/csi-storageclass.yaml
@@ -4,5 +4,5 @@ metadata:
   name: csi-hostpath-sc
 provisioner: hostpath.csi.k8s.io
 reclaimPolicy: Delete
-volumeBindingMode: Immediate
-allowVolumeExpansion: true
+volumeBindingMode: WaitForFirstConsumer
+# allowVolumeExpansion: true
